# survive-arena-shooter

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DOKUMENTACIJA.md  README.md  survive-arena-shooter.sln  survive-arena-shooter.vcxproj  survive-arena-shooter.vcxproj.filters
assets/maps/colloseum/: Colloseum.mtl
assets/maps/gate/: gate.mtl
assets/maps/gate/textures/: gate.mtl
assets/models/enemy/: ctf_b.pcx  ctf_b_i.pcx  ctf_r.pcx  rex.PCX  rex.txt  tris.md2  weapon.md2
assets/models/fog_enemy/: Default.pcx  Default_I.pcx  Readme.txt  Weapon.pcx
intermediates/: survive-arena-shooter.exe.recipe  vc143.idb
intermediates/survive-.efae4f09.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  survive-arena-shooter.lastbuildstate
libs/bullet3/lib/Debug/: Bullet2FileLoader.lib  Bullet3Collision.lib  Bullet3Common.lib  Bullet3Dynamics.lib  Bullet3Geometry.lib  BulletInverseDynamics.lib  LinearMath.lib
libs/bullet3/lib/Release/: Bullet2FileLoader.lib  Bullet3Collision.lib  Bullet3Common.lib  Bullet3Dynamics.lib  Bullet3Geometry.lib  BulletInverseDynamics.lib  LinearMath.lib
src/: DebugDrawer.cpp  DebugDrawer.h  Enemy.cpp  Enemy.h  FogEnemy.cpp  FogEnemy.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  InputHandler.h  Physics.cpp  Physics.h  Pickup.cpp  Pickup.h  Player.cpp  Player.h  Powerup.cpp  Powerup.h  main.cpp
